[package]
name = "esp32-mqtt"
version = "0.1.0"
authors = ["Frank Lyaruu <frank.lyaruu@formelio.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.0", features = ["async", "embassy", "embassy-executor", "embassy-executor-thread","embassy-time-timg0","embassy-futures", "embassy-sync", "embedded-hal-async", "embedded-io", "embedded-io-async", "esp32c3", "embassy-integrated-timers"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.4.0", features = ["async", "embassy-net", "esp32c3", "log", "phy-enable-usb", "utils", "wifi"] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-executor = { version = "0.5.0", features = ["executor-thread", "integrated-timers", "nightly"] }
embassy-time = "0.3.0"
embassy-net = { version = "0.4.0", features = ["dhcpv4", "dns", "medium-ip", "medium-ethernet", "tcp", "udp"] }
embedded-nal-async = "0.7.1"
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
