[package]
name = "esp32-mqtt"
version = "0.1.0"
authors = ["Frank Lyaruu <frank.lyaruu@formelio.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.12.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ "esp32c3","async" ] }
esp-hal-embassy = { version = "0.1.0", features = [
    "time-timg0",            # Compatible with all chips
    "esp32c3"
] }
embassy-time = "0.3"
embassy-executor = { version = "0.5", features = ["nightly", "integrated-timers","executor-thread"] }

esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.6.0", features = [
    "esp32c3",
    "phy-enable-usb",
    "utils",
    "wifi",
    "embassy-net",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-net = { version = "0.4.0", features = ["dns", "tcp", "medium-ethernet", "dhcpv4-hostname"] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.0"
embedded-nal-async = "0.7.1"
rust-mqtt = {version="0.3.0", default-features = false}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
